--- a/CoreLayer/CoreLayer.csproj
+++ b/CoreLayer/CoreLayer.csproj
@@ -55,6 +55,14 @@
     <Compile Include="DataAccess\IEntityRepository.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Results\DataResult.cs" />
+    <Compile Include="Utilities\Results\ErrorDataResult.cs" />
+    <Compile Include="Utilities\Results\ErrorResult.cs" />
+    <Compile Include="Utilities\Results\IDataResult.cs" />
+    <Compile Include="Utilities\Results\IResult.cs" />
+    <Compile Include="Utilities\Results\Result.cs" />
+    <Compile Include="Utilities\Results\SuccessDataResult.cs" />
+    <Compile Include="Utilities\Results\SuccessResult.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
